Scanfill fails with axis aligned verts #41986

Closed
opened 2014-09-28 11:39:36 +02:00 by Campbell Barton · 6 comments

In this example with Blender 2.72 testbuild, scanfill fails. (note grease pencil area)
bad_scanfill.blend

In this example with Blender 2.72 testbuild, scanfill fails. (note grease pencil area) [bad_scanfill.blend](https://archive.blender.org/developer/F113365/bad_scanfill.blend)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton self-assigned this 2014-09-28 11:39:36 +02:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by fa1e6c5442

This issue was referenced by fa1e6c5442e6bae39b60d3c22b80d2ab20e1bd7a
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Owner

Closed by commit fa1e6c5442.

Closed by commit fa1e6c5442.

This issue was referenced by 20c84ad2b2

This issue was referenced by 20c84ad2b2dfcf5eb7c63706f705e7af2f586107
Sign in to join this conversation.
2 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#41986
No description provided.