Fix T41986: polyfill fails with axis aligned verts